2/29/12 #2920 changes to PhotonImageFactory (now PhotonImageChange and PhotonNode)
2/14/12 #3255, initial attempt to make the interfaces for HSlider and VSlider more similar
2/3/12 #3245, Fixed knob and tick locations
2/2/12 #3223, collapse SimSharingComboBoxNode into ComboBoxNode, since all instances were of type SimSharingComboBoxNode
2/2/12 i18n of WavelengthControl
1/23/12 #3226, add data collection to SliderNode hierarchy
1/18/12 Simsharing: add UserComponentType to UserMessages, delete IComponentType
1/16/12 restored sim-sharing to ComboBoxNode via subclassing, see SimSharingComboBoxNode
1/16/12 fixed sim-sharing for Reset All (ResetAllButtonNode)
1/11/12 Simsharing: support customization of drag handlers via both subclassing and mutation
1/11/12 Simsharing: delete the deprecated SimSharingDragHandlerOld, all uses have been replaced
1/11/12 Simsharing: add UserComponent to conductivity tester, with id chaining for probes
1/11/12 Simsharing: change FaucetNode so that primary implementation uses flowRate, not flowRatePercentage. Eliminates need for adapter, and provides correct value in sim-sharing messages.
1/11/12 Simsharing: add UserComponent chaining for FaucetNode and its FaucetSlider
1/11/12 Simsharing: remove broken drag handler accessor from FaucetNode, make FaucetSliderNode a subclass of SimSharingHSliderNode
1/11/12 Simsharing: remove simsharing from HSliderNode and VSliderNode, to be added via subclassing
1/11/12 Simsharing: add PInputEvent parameter to SimSharingDragHandler methods that are intended to be overridden
1/11/12 Simsharing: factor out SimSharingDragPoints, for use in Swing and Piccolo drag handlers
1/4/12 Added sim sharing features to play/pause/step and icon buttons
1/2/12 #3189, Moved setCursor to subclass DynamicCursorHandler
12/22/11 #3199, FaucetNode cleanup
12/22/11 #3198, simplify FaucetSliderNode, behavior unchanged for existing clients
12/22/11 #3197, add sim-sharing to FaucetNode