@@ -4,6 +4,8 @@ package edu.colorado.phet.bendinglight.view;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
 
+import edu.colorado.phet.bendinglight.BendingLightSimSharing;
+import edu.colorado.phet.bendinglight.BendingLightSimSharing.UserComponents;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.piccolophet.nodes.WavelengthControl;
@@ -20,7 +22,7 @@ import static edu.colorado.phet.common.phetcommon.view.util.VisibleColor.MIN_WAV
  */
 public class BendingLightWavelengthControl extends PNode {
     public BendingLightWavelengthControl( final Property<Double> wavelengthProperty, final Property<LaserColor> laserColor ) {
-        final WavelengthControl wavelengthControl = new WavelengthControl( 150, 27, MIN_WAVELENGTH, 700 ) {{//only go to 700nm because after that the reds are too black
+        final WavelengthControl wavelengthControl = new WavelengthControl( UserComponents.wavelengthControl, 150, 27, MIN_WAVELENGTH, 700 ) {{//only go to 700nm because after that the reds are too black
             final PNode wc = this;//to access from within closure below
             setWavelength( wavelengthProperty.get() * 1E9 );//Convert between SI and nanometers
 
