@@ -1,0 +1,16 @@
+// Copyright 2002-2012, University of Colorado
+package edu.colorado.phet.hydrogenatom;
+
+import edu.colorado.phet.common.phetcommon.simsharing.messages.IUserComponent;
+
+/**
+ * Data-collection enums specific to this sim.
+ *
+ * @author Chris Malley (cmalley@pixelzoom.com)
+ */
+public class HASimSharing {
+
+    public enum UserComponents implements IUserComponent {
+        gunWavelengthControl
+    }
+}
